[tool.poetry]
name = "jolt-july-update"
version = "0.1.0"
description = ""
authors = ["Sam Ragsdale <sammage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
drawsvg = "^2.4.0"
numpy = "^2.0.0"
svgwrite = "^1.4.3"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
